HVAC Backup 2/objects/Wage_Matrix__c(1).object
<CustomObject>
    <fields>
        <fullName>Additional_Cost__c</fullName>
        <label>Additional Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basic_DA__c</fullName>
        <label>Basic + DA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Star_EGM__c</fullName>
        <label>Blue Star EGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Blue_Star__c</fullName>
        <formula>Total_Monthly_CTC__c*12 +  Outsourcing_Channel_Partner_Margin__c +  Uniforms_Shoes__c +  Tools__c +  Med_Checkup_Diwali_Sweets__c +  Mobile_Expenses__c +  Stationery_Minor_Consumables__c +  FH_NH__c +  Gratuity__c +  OT_Absenteeism__c +  Additional_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost to Blue Star</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_to_Customer__c</fullName>
        <formula>Cost_to_Blue_Star__c +  Blue_Star_EGM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESIC__c</fullName>
        <label>ESIC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FH_NH__c</fullName>
        <label>FH/NH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gratuity__c</fullName>
        <label>Gratuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Basic_DA__c +  HRA__c +  MW_Revision__c +  Other_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leave_with_Wages__c</fullName>
        <label>Leave with Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MW_Revision__c</fullName>
        <label>MW Revision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Med_Checkup_Diwali_Sweets__c</fullName>
        <label>Med Checkup/Diwali Sweets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance__c</fullName>
        <label>Medical Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Wage_Rate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Minimum Wage Rate</label>
        <referenceTo>Minimum_Wage_Rate__c</referenceTo>
        <relationshipLabel>Wage Matrix</relationshipLabel>
        <relationshipName>Wage_Matrix</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mobile Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OT_Absenteeism__c</fullName>
        <label>OT/Absenteeism</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Allowance__c</fullName>
        <label>Other Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outsourcing_Channel_Partner_Margin__c</fullName>
        <label>Outsourcing/Channel Partner Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PF__c</fullName>
        <label>PF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Minimum_Wage_Rate__r.State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stationery_Minor_Consumables__c</fullName>
        <label>Stationery/Minor Consumables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <label>Tools</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_CTC__c</fullName>
        <formula>Gross_Salary__c +  ESIC__c +  PF__c +  Bonus__c + Leave_with_Wages__c +  Medical_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly CTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uniforms_Shoes__c</fullName>
        <label>Uniforms/Shoes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Wage Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Minimum_Wage_Rate__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WM-{0000}</displayFormat>
        <label>Wage Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wage Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Basic_must_be_greater_than_minimum_wage</fullName>
        <active>true</active>
        <errorConditionFormula>Basic_DA__c &lt; Minimum_Wage_Rate__r.Amount__c</errorConditionFormula>
        <errorDisplayField>Basic_DA__c</errorDisplayField>
        <errorMessage>Basic Rates must be in accordance with Minimum Wage Rates</errorMessage>
    </validationRules>
</CustomObject>